--- a/Sender/Dockerfile
+++ b/Sender/Dockerfile
@@ -1,20 +1,13 @@
-#See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
-
-FROM mcr.microsoft.com/dotnet/core/runtime:3.1-buster-slim AS base
-WORKDIR /app
-
-FROM mcr.microsoft.com/dotnet/core/sdk:3.1-buster AS build
-WORKDIR /src
-COPY ["Sender/Sender.csproj", "Sender/"]
-RUN dotnet restore "Sender/Sender.csproj"
-COPY . .
-WORKDIR "/src/Sender"
-RUN dotnet build "Sender.csproj" -c Release -o /app/build
-
-FROM build AS publish
-RUN dotnet publish "Sender.csproj" -c Release -o /app/publish
-
-FROM base AS final
-WORKDIR /app
-COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "Sender.dll"]
+    FROM mcr.microsoft.com/dotnet/core/sdk:3.1 AS build-env 
+    WORKDIR /app 
+    #Copy csproj and restore as distinct layers 
+    COPY *.csproj ./ 
+    RUN dotnet restore 
+    #Copy everything else and build 
+    COPY . ./ 
+    RUN dotnet publish -c Release -o out 
+    # #Build runtime image 
+    FROM mcr.microsoft.com/dotnet/core/aspnet:3.1 
+    WORKDIR /app 
+    COPY --from=build-env /app/out . 
+    ENTRYPOINT ["dotnet", "Consumer.dll"]
